--- a/Translations/German/ModInfo.xml
+++ b/Translations/German/ModInfo.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0"?>
 <ModInfo xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <displayName>German Translation Part 1</displayName>
   <description>Deutsche Übersetzung</description>
   <modpicture>1920px-Flag_of_Germany.svg.png</modpicture>
   <author>Revan/ShadowDuke</author>
   <modioID>143281</modioID>
-  <modioFileID>194159</modioFileID>
-  <modversion>for 0.1.42113</modversion>
+  <modioFileID>197567</modioFileID>
+  <modversion>for 0.1.42335</modversion>
   <homepage>https://github.com/ShadowDuke/OW_GermanPatch</homepage>
   <singlePlayer>true</singlePlayer>
   <multiplayer>true</multiplayer>
