--- a/Translations/German/text-trait-change.xml
+++ b/Translations/German/text-trait-change.xml
@@ -71,6 +71,10 @@
 		<Translation>Reiter</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_TRAIT_CARPENTER</zType>
+		<Translation>Zimmerer</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_TRAIT_AFFABLE</zType>
 		<Translation>Umgänglich</Translation>
 	</Entry>
@@ -108,7 +112,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_INTOLERANT</zType>
-		<Translation>Intolerant</Translation>
+		<Translation>Unduldsam</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SLOTHFUL</zType>
@@ -301,6 +305,10 @@
 	<Entry>
 		<zType>TEXT_TRAIT_PIOUS</zType>
 		<Translation>Fromm</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_TRAIT_WANTON</zType>
+		<Translation>Schamlos</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_HUMBLE</zType>
